syntax = "proto3";

package example.bank.v1;

service Msg {
  rpc Send(MsgSend) returns (MsgSendResponse);
}

message MsgSend {
  bytes from = 1;
  bytes to = 2;
  string denom = 3;
  bytes amount = 4;
}

message MsgSendResponse {}

service Query {
  rpc Balance(QueryBalance) returns (QueryBalanceResponse);
}

message QueryBalance {
  bytes address = 1;
  string denom = 2;
}

message QueryBalanceResponse {
  bytes balance = 1;
}